style(header.scss): add `z-index: 999;` to .header__menu to prevent overlapping issues from page content

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -49,6 +49,8 @@
     }
 
     &__menu {
+        z-index: 999 !important;
+
         &-items {
             --menu-gap: var(--header-menu-gap);
 
